--- a/public/templates/basic-template/main.tex
+++ b/public/templates/basic-template/main.tex
@@ -55,7 +55,7 @@ mayank2aggarwal@gmail.com \cvinfosep
 
 %% Another custom command provide by scimisc-cv.sty.
 %% First two argumetns are typeset on the first line in bold; 3rd and 4th arguments are typset on second line in italics. 2nd, 3rd and 4th arguments are OPTIONAL
-    \cvsubsection{StackOverflow CLONE}[\href{https://github.com/Mayank0255}{GITHUB}]
+    \cvsubsection{StackOverflow CLONE}[]
     [Scientist I][Sept 2018 to present]
 
     \begin{itemize}
