feat: projects section implementation

--- a/public/templates/basic-template/main.tex
+++ b/public/templates/basic-template/main.tex
@@ -55,8 +55,8 @@ mayank2aggarwal@gmail.com \cvinfosep
 
 %% Another custom command provide by scimisc-cv.sty.
 %% First two argumetns are typeset on the first line in bold; 3rd and 4th arguments are typset on second line in italics. 2nd, 3rd and 4th arguments are OPTIONAL
-    \cvsubsection{StackOverflow CLONE}[]
-    [Scientist I][Sept 2018 to present]
+    \cvsubsection{StackOverflow CLONE}[\href{https://www.linkedin.com/in/mayank-aggarwal-14301b168/}{GitHub}]
+    [Sept 2018 to present][]
 
     \begin{itemize}
         \item Led 3 highly collaborative projects all focused on the validation of novel therapeutic vectors in animal disease models (neurodegenerative diseases)
